// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HintList Should match custom HintList snapshot 1`] = `
<View>
  <View>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
        }
      }
    >
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight="8"
        bbWidth="8"
        fill="none"
        focusable={false}
        height={8}
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "marginTop": 0,
            },
            {
              "flex": 0,
              "height": 8,
              "width": 8,
            },
          ]
        }
        vbHeight={8}
        vbWidth={8}
        width={8}
      >
        <RNSVGGroup
          fill={null}
          propList={
            [
              "fill",
            ]
          }
        >
          <RNSVGCircle
            cx="4"
            cy="4"
            fill={
              {
                "payload": 4290954697,
                "type": 0,
              }
            }
            propList={
              [
                "fill",
              ]
            }
            r="4"
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <Text
        style={
          {
            "height": 12,
            "width": 12,
          }
        }
      />
      <Text
        allowFontScaling={false}
        style={
          {
            "color": "#676D79",
            "flexShrink": 1,
            "fontFamily": "Averta CY",
            "fontSize": 16,
            "fontWeight": "normal",
            "letterSpacing": -0.02,
            "lineHeight": 22,
          }
        }
      >
        hint 1
      </Text>
    </View>
    <Text
      style={
        {
          "height": 20,
          "width": 20,
        }
      }
    />
  </View>
  <View>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
        }
      }
    >
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight="8"
        bbWidth="8"
        fill="none"
        focusable={false}
        height={8}
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "marginTop": 0,
            },
            {
              "flex": 0,
              "height": 8,
              "width": 8,
            },
          ]
        }
        vbHeight={8}
        vbWidth={8}
        width={8}
      >
        <RNSVGGroup
          fill={null}
          propList={
            [
              "fill",
            ]
          }
        >
          <RNSVGCircle
            cx="4"
            cy="4"
            fill={
              {
                "payload": 4290954697,
                "type": 0,
              }
            }
            propList={
              [
                "fill",
              ]
            }
            r="4"
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <Text
        style={
          {
            "height": 12,
            "width": 12,
          }
        }
      />
      <Text
        allowFontScaling={false}
        style={
          {
            "color": "#676D79",
            "flexShrink": 1,
            "fontFamily": "Averta CY",
            "fontSize": 16,
            "fontWeight": "normal",
            "letterSpacing": -0.02,
            "lineHeight": 22,
          }
        }
      >
        hint 2
      </Text>
    </View>
    <Text
      style={
        {
          "height": 20,
          "width": 20,
        }
      }
    />
  </View>
</View>
`;

exports[`HintList Should match custom HintList snapshot with prop bulletPointAlignCenter 1`] = `
<View>
  <View>
    <View
      style={
        {
          "alignItems": "flex-start",
          "flexDirection": "row",
        }
      }
    >
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight="8"
        bbWidth="8"
        fill="none"
        focusable={false}
        height={8}
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "marginTop": 8,
            },
            {
              "flex": 0,
              "height": 8,
              "width": 8,
            },
          ]
        }
        vbHeight={8}
        vbWidth={8}
        width={8}
      >
        <RNSVGGroup
          fill={null}
          propList={
            [
              "fill",
            ]
          }
        >
          <RNSVGCircle
            cx="4"
            cy="4"
            fill={
              {
                "payload": 4290954697,
                "type": 0,
              }
            }
            propList={
              [
                "fill",
              ]
            }
            r="4"
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <Text
        style={
          {
            "height": 12,
            "width": 12,
          }
        }
      />
      <Text
        allowFontScaling={false}
        style={
          {
            "color": "#676D79",
            "flexShrink": 1,
            "fontFamily": "Averta CY",
            "fontSize": 16,
            "fontWeight": "normal",
            "letterSpacing": -0.02,
            "lineHeight": 22,
          }
        }
      >
        hint 1
      </Text>
    </View>
    <Text
      style={
        {
          "height": 20,
          "width": 20,
        }
      }
    />
  </View>
  <View>
    <View
      style={
        {
          "alignItems": "flex-start",
          "flexDirection": "row",
        }
      }
    >
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight="8"
        bbWidth="8"
        fill="none"
        focusable={false}
        height={8}
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "marginTop": 8,
            },
            {
              "flex": 0,
              "height": 8,
              "width": 8,
            },
          ]
        }
        vbHeight={8}
        vbWidth={8}
        width={8}
      >
        <RNSVGGroup
          fill={null}
          propList={
            [
              "fill",
            ]
          }
        >
          <RNSVGCircle
            cx="4"
            cy="4"
            fill={
              {
                "payload": 4290954697,
                "type": 0,
              }
            }
            propList={
              [
                "fill",
              ]
            }
            r="4"
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <Text
        style={
          {
            "height": 12,
            "width": 12,
          }
        }
      />
      <Text
        allowFontScaling={false}
        style={
          {
            "color": "#676D79",
            "flexShrink": 1,
            "fontFamily": "Averta CY",
            "fontSize": 16,
            "fontWeight": "normal",
            "letterSpacing": -0.02,
            "lineHeight": 22,
          }
        }
      >
        hint 2
      </Text>
    </View>
    <Text
      style={
        {
          "height": 20,
          "width": 20,
        }
      }
    />
  </View>
  <View>
    <View
      style={
        {
          "alignItems": "flex-start",
          "flexDirection": "row",
        }
      }
    >
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight="8"
        bbWidth="8"
        fill="none"
        focusable={false}
        height={8}
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "marginTop": 8,
            },
            {
              "flex": 0,
              "height": 8,
              "width": 8,
            },
          ]
        }
        vbHeight={8}
        vbWidth={8}
        width={8}
      >
        <RNSVGGroup
          fill={null}
          propList={
            [
              "fill",
            ]
          }
        >
          <RNSVGCircle
            cx="4"
            cy="4"
            fill={
              {
                "payload": 4290954697,
                "type": 0,
              }
            }
            propList={
              [
                "fill",
              ]
            }
            r="4"
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <Text
        style={
          {
            "height": 12,
            "width": 12,
          }
        }
      />
      <Text
        allowFontScaling={false}
        style={
          {
            "color": "#676D79",
            "flexShrink": 1,
            "fontFamily": "Averta CY",
            "fontSize": 16,
            "fontWeight": "normal",
            "letterSpacing": -0.02,
            "lineHeight": 22,
          }
        }
      >
        <Text
          allowFontScaling={false}
          style={
            {
              "color": "#676D79",
              "flexShrink": 1,
              "fontFamily": "Averta CY",
              "fontSize": 16,
              "fontWeight": "bold",
              "letterSpacing": -0.02,
              "lineHeight": 22,
            }
          }
        >
          Hint 3
        </Text>
      </Text>
    </View>
    <Text
      style={
        {
          "height": 20,
          "width": 20,
        }
      }
    />
  </View>
</View>
`;

exports[`HintList Should match default HintList snapshot 1`] = `
<View>
  <View>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
        }
      }
    >
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight="8"
        bbWidth="8"
        fill="none"
        focusable={false}
        height={8}
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "marginTop": 0,
            },
            {
              "flex": 0,
              "height": 8,
              "width": 8,
            },
          ]
        }
        vbHeight={8}
        vbWidth={8}
        width={8}
      >
        <RNSVGGroup
          fill={null}
          propList={
            [
              "fill",
            ]
          }
        >
          <RNSVGCircle
            cx="4"
            cy="4"
            fill={
              {
                "payload": 4290954697,
                "type": 0,
              }
            }
            propList={
              [
                "fill",
              ]
            }
            r="4"
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <Text
        style={
          {
            "height": 16,
            "width": 16,
          }
        }
      />
      <Text
        allowFontScaling={false}
        style={
          {
            "color": "#676D79",
            "flexShrink": 1,
            "fontFamily": "Averta CY",
            "fontSize": 16,
            "fontWeight": "bold",
            "letterSpacing": -0.02,
            "lineHeight": 22,
          }
        }
      >
        hint 1
      </Text>
    </View>
    <Text
      style={
        {
          "height": 20,
          "width": 20,
        }
      }
    />
  </View>
  <View>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
        }
      }
    >
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight="8"
        bbWidth="8"
        fill="none"
        focusable={false}
        height={8}
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "marginTop": 0,
            },
            {
              "flex": 0,
              "height": 8,
              "width": 8,
            },
          ]
        }
        vbHeight={8}
        vbWidth={8}
        width={8}
      >
        <RNSVGGroup
          fill={null}
          propList={
            [
              "fill",
            ]
          }
        >
          <RNSVGCircle
            cx="4"
            cy="4"
            fill={
              {
                "payload": 4290954697,
                "type": 0,
              }
            }
            propList={
              [
                "fill",
              ]
            }
            r="4"
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <Text
        style={
          {
            "height": 16,
            "width": 16,
          }
        }
      />
      <Text
        allowFontScaling={false}
        style={
          {
            "color": "#676D79",
            "flexShrink": 1,
            "fontFamily": "Averta CY",
            "fontSize": 16,
            "fontWeight": "bold",
            "letterSpacing": -0.02,
            "lineHeight": 22,
          }
        }
      >
        hint 2
      </Text>
    </View>
    <Text
      style={
        {
          "height": 20,
          "width": 20,
        }
      }
    />
  </View>
</View>
`;
